# resticlvm

./: .gitignore  B2_TESTING_PLAN.md  CHANGELOG.md  CLAUDE.md  EXAMPLE_SSH_SETUP.md  MULTIPLE_REPO_IMPLEMENTATION_NOTES.md  MULTI_REPO_IMPLEMENTATION_NOTES.md  Makefile  README.md  environment.yml  pixi.toml  pyproject.toml  ss
.github/workflows/: mirror-to-gitlab.yml
dev/failure-injection/: _common.sh  setup_nonroot.sh  teardown_nonroot.sh  verify_batch.sh  verify_multirepo.sh  verify_nonroot.sh  verify_root.sh
dev/vm-builder/: .gitignore  README.md
docs/: B2_SETUP_KS.md  EXAMPLE_B2_SETUP.md  EXAMPLE_SSH_SETUP.md  FAILURE_INJECTION_TESTING.md  FRASER_VM_READY.md  ISSUE_24_CLEANUP_FIX_PLAN.md  ISSUE_84_SNAPSHOT_ATOMICITY_PLAN.md  PRODUCTION_READINESS_REVIEW.md
docs/scratch/: RELEASE_CHECKLIST.md
docs/test-config-examples/: README.md  backup-comprehensive-example.toml  direct-b2-backup.toml  direct-sftp-backup.toml  local-with-remote-copy.toml  mixed-backup-types.toml  multiple-copy-destinations.toml  multiple-local-repos.toml  recommended-full-machine.toml  single-local-repo.toml
src/: arg_handlers.sh  backup_helpers.sh  backup_lv.sh  backup_lv_nonroot.sh  backup_lv_root.sh  backup_path.sh  command_builders.sh  lv_nonroot_snapshot_backup.sh  lv_root_snapshot_backup.sh  lv_snapshot_backup.sh  lv_snapshots.sh  message_display.sh  path_backup.sh  pre_checks.sh  restic_backup_path.sh  restic_backup_simple.sh
src/lib/: arg_handlers.sh  command_runners.sh  message_display.sh  pre_checks.sh
src/resticlvm/: __init__.py  app.py  backup_jobs.py  backup_jobs_new.py  backup_plan.py  backup_runner.py  chroot_utils.py  (+14 more)
test/: example_config.toml  restic_lvm_config.toml  resticlvm_config.toml  test_backup_config.py  test_backup_jobs.py  test_backup_plan.py  test_backup_runner.py  test_cli.py  test_config_loader.py  test_config_validator.py  test_credentials.py  test_data_classes.py  test_dispatch.py  test_local_classes.py  test_logical_volume.py  test_privileges.py  test_restic_classes.py  test_restic_repo.py  test_snapshot_coordinator.py  test_terminal.py  test_utils_mount.py  test_utils_run.py  test_version.py
tools/: README.md  environment.yml  init-b2-repos.sh
(+90 files in other folders)
