[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "resticlvm"
version = "0.1.2"
description = "Restic + LVM backup orchestration tool"
readme = "README.md"
license = "MIT"
authors = [{ name = "Duane Goodner", email = "dmgoodner@gmail.com" }]
requires-python = ">=3.11"

[project.scripts]
rlvm-backup = "resticlvm.backup_runner:main"
rlvm-prune = "resticlvm.prune_runner:main"

[tool.black]
line-length = 79

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"resticlvm" = []
"resticlvm.scripts" = ["*.sh", "lib/*.sh"]
