[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "resticlvm"
version = "0.1.3"
description = "Restic + LVM backup orchestration tool"
readme = "README.md"
license = "MIT"
authors = [{ name = "Duane Goodner", email = "dmgoodner@gmail.com" }]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
rlvm-backup = "resticlvm.orchestration.backup_runner:main"
rlvm-prune = "resticlvm.orchestration.prune_runner:main"

[tool.black]
line-length = 79

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"resticlvm" = []
"resticlvm.scripts" = ["*.sh", "lib/*.sh"]
